syntax = "proto3";

import "Protos/machine-models.proto";

option csharp_namespace = "VendingMachine.Service.Machines.ServiceCommunications";

package VendingMachine.Service.Machines.ServiceCommunications;

service MachineItems {
	rpc ExistMachine (ExistMachineRequest) returns (ExistMachineResponse);
	rpc GetMachineInfos (GetMachineInfoRequest) returns (GetMachineInfoResponse);
	rpc GetMachineStatus (MachineStatusRequest) returns (MachineStatusResponse);
}
